--- a/Recipe-Book-App/package.json
+++ b/Recipe-Book-App/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.0",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.2.0",
