--- a/Recipe-Book-App/package.json
+++ b/Recipe-Book-App/package.json
@@ -13,11 +13,13 @@
     "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "json": "^11.0.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "server": "^1.0.42"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
